bases/bondy/resources/bondy-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bondy
  labels:
    app: bondy
    tier: application-router
    fluentd: erlang
    app.kubernetes.io/name: bondy
    app.kubernetes.io/component: application-router
spec:
  selector:
    matchLabels:
      app: bondy
  serviceName: bondy
  replicas: 3
  revisionHistoryLimit: 1
  podManagementPolicy: Parallel
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: bondy
        tier: application-router
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "18081"
    spec:
      terminationGracePeriodSeconds: 300
      # initContainers: null
      nodeSelector:
        node-role: "bondy-worker"
      containers:
      - name: bondy
        image: bondy-image
        imagePullPolicy: Always
        ports:
          - name: http
            containerPort: 18080
            protocol: TCP
          - name: https
            containerPort: 18083
            protocol: TCP
          - name: admin-http
            containerPort: 18081
            protocol: TCP
          - name: admin-https
            containerPort: 18084
            protocol: TCP
          - name: wamp-tcp
            containerPort: 18082
            protocol: TCP
          - name: wamp-tls
            containerPort: 18085
            protocol: TCP
          - name: bridge-tls
            containerPort: 18093
            protocol: TCP
          - name: peer-tcp
            containerPort: 18086
            protocol: TCP
          - name: peer-tls
            containerPort: 18087
            protocol: TCP
        volumeMounts:
          - name: bondy-conf-volume
            mountPath: /bondy/etc/bondy.conf.template
            subPath: bondy.conf.template
          - name: bondy-conf-volume
            mountPath: /bondy/etc/security_config.json.template
            subPath: security_config.json.template
          - name: bondy-data-volume
            mountPath: /bondy/data
          - name: bondy-tmp-volume
            mountPath: /bondy/tmp
          - name: bondy-log-volume
            mountPath: /bondy/log
        livenessProbe:
          httpGet:
            path: /ping
            port: 18081
            scheme: HTTP
          initialDelaySeconds: 20
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 5
        # startupProbe:
        #   httpGet:
        #     path: /ready
        #     port: 18081
        #     scheme: HTTP
        #   initialDelaySeconds: 90
        #   periodSeconds: 10
        #   timeoutSeconds: 2
        #   failureThreshold: 15
        readinessProbe:
          httpGet:
            path: /ready
            port: 18081
            scheme: HTTP
          initialDelaySeconds: 20
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 15
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
      volumes:
        - name: bondy-conf-volume
          configMap:
            name: bondy-config
        - name: bondy-tmp-volume
          emptyDir: {}
        - name: bondy-log-volume
          emptyDir: {}
  volumeClaimTemplates:
  - metadata:
      name: bondy-data-volume
    spec:
      accessModes:
      - ReadWriteOnce
