bases/bondy/resources/bondy-internal-api-gateway-svc.yaml
# Internal service exposing internal endpoints:
# HTTP and WebSockets.
# Exposes the Service on a cluster-internal IP.
# Service is only reachable from within the cluster.
apiVersion: v1
kind: Service
metadata:
  name: internal-api-gateway
spec:
  type: ClusterIP
  selector:
    app: bondy
  ports:
    - name: api-http
      port: 80
      targetPort: http
    # - name: api-https
    #   port: 443
    #   targetPort: https
