bases/bondy/resources/bondy-load-balancer.yaml
# Public WAMP Rawsocket Service.
# Exposes the Service externally using a cloud provider's load balancer.
# NodePort and ClusterIP Services, to which the external load balancer routes,
# are automatically created.
apiVersion: v1
kind: Service
metadata:
  name: external-wamp
spec:
  type: LoadBalancer
  selector:
    app: bondy
