bases/bondy/resources/bondy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-bondy
  annotations:
spec:
  spec:
  type: LoadBalancer
  selector:
    app: bondy
  ports:
    - name: http
      port: 80
      targetPort: http
    # - name: https
    #   port: 443
    #   targetPort: https
    - name: wamp-tcp
      port: 9072
      targetPort: wamp-tcp
    # - name: wamp-tls
    #   port: 9073
    #   targetPort: wamp-tls
    # - name: bridge-tls
    #   port: 9075
    #   targetPort: bridge-tls
